--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -510,6 +510,12 @@ SAVEDLG_FILETYPES=TS maps|*.mpr%8*.map|TS multi maps|*.mpr|TS single maps|*.map|
 ; tool tip strings
 TT_TriggerHouse=Defines the house the trigger applies to
 
+Undo=Undo (Ctrl+Z)
+Redo=Redo (Ctrl+Y)
+Copy=Copy (Ctrl+C)
+Paste=Paste (Ctrl+V)
+Manual=Manual (F1)
+
 ; error strings for map validation
 MV_NoMap=This is no map
 MV_NoBasic=Basic settings don´t exist
@@ -1110,7 +1116,78 @@ CG_IDP_FILE_CORRUPT=提示文件语法错误
 TipDialogNext=下一提示
 TipDialogShowAtStartup=启动时显示
 TipDialogClose=关闭
-TipDialogCaption=每日一贴
+TipDialogCaption=您知道吗
+
+; menu strings
+File=文件
+New=新建	Ctrl + N
+Open=打开	Ctrl + O
+Save=保存	Ctrl + S
+Save as=另存为
+Check map=检查错误
+Quit=关闭程序
+
+Edit=编辑
+Undo	Ctrl+Z=撤销	Ctrl + Z
+Redo	Ctrl+Y=重做	Ctrl + Y
+Manual	F1=帮助菜单	F1
+Copy	Ctrl+C=复制	Ctrl + C
+Copy whole map=复制整张地图
+Paste	Ctrl+V=粘贴	Ctrl + V
+Paste centered=居中粘贴
+Map=地图属性
+Basic=基础设置
+Special flags=特殊设置
+Lighting=光照设置
+Singleplayer settings=单人模式设置
+Houses=参战方设置
+Local variables (Locals)=局部变量设置
+Trigger editor=事件触发
+Tag editor=触发标签
+Scripts=小队脚本
+Taskforces=成员组
+Teams=小队选项
+AI Triggers=AI触发
+AI Trigger enabling=AI触发允许清单
+INI editing=地图INI规则
+
+Terrain=地形
+Raise ground=抬升地表
+Lower ground=降低地表
+Flatten ground=自动平整地表
+Hide tileset=隐藏关联地形块
+Show every tileset=显示关联地形块
+Hide single field=隐藏单元格
+Show all fields=显示全部地形块
+Raise single tile (Be careful!)=抬升单个单元格(谨慎!)
+Lower single tile (Be careful!)=降低单个单元格(谨慎!)
+ToolSettingsBarBrushSize=笔刷尺寸:
+
+Map tools=工具
+Change map height=修改地表高度
+Autocreate shores=自动生成海岸线
+Auto level using cliffs=自动调整悬崖地表高度
+Paint cliff front=绘制悬崖前部
+Paint cliff back=绘制悬崖后部
+Search Waypoint=查找路径点
+Tool Scripts=工具脚本
+
+Options=选项
+Settings=设置
+Show minimap=显示缩略地图
+Easy mode=精简模式
+Sounds=开启音效
+Show Building Outline=显示建筑轮廓
+Disable AutoShore	CTRL-A=禁止自动产生海岸	Ctrl + A
+Disable AutoLat	CTRL-L=禁止自动地表交界	Ctrl + A
+Disable Slope Correction=禁用斜坡修正
+Smooth zoom=平滑缩放
+Use default mouse cursor=使用默认鼠标指针
+
+Help=帮助
+Info=关于
+Tip of the day=每日提示
+Show logs=查看日志
 
 ; main dialog strings
 MainDialogCaption=%9
@@ -1188,12 +1265,16 @@ BasicInitTime=初始化时间:
 BasicAddOnNeeded=附加数据:
 
 ; mapinfo dialog
+Map Properties=地图属性
 MapDesc=通用地图属性:
 MapSizeFrame=地图尺寸
 MapSize=整个地图的尺寸，由 MapPack 使用。
 MapVisibleSizeFrame=可见区域
 MapVisibleSize=地图的可见区域。格式：左, 上, 宽, 高。
 MapTheater=地图类型：
+MapWidth=宽度：
+MapHeight=高度：
+MapChange=应用更改
 
 ; singleplayer basics dialog
 SingleplayerDesc=单人地图的附加设置。
@@ -1211,6 +1292,7 @@ SingleplayerPostScore=评分屏之后:
 SingleplayerPreMapSelect=预地图选择:
 
 ; houses dialog
+Countries=参战方
 HousesDesc=参战方(国家)指不同的游戏者，AI和人类。如果是多人地图，在这里不要建立任何参战方！如果是单人地图，并且未设置参战方，首先单击[标准参战方]，如果需要可添加新参战方，然后选择人类玩家的参战方(不要忘记选中[游戏者控制])！
 HousesPlayerHouse=人类玩家参战方:
 HousesHouse=当前参战方:
@@ -1248,6 +1330,33 @@ LoadInfo=如想获取更多信息，请与 ryo_5434536@163.com 联系
 LoadInitDDraw=初始化 Direct Draw 6 ...
 LoadInitPics=正在载入图像...
 LoadExtractStdMixFiles=正在打开 std.mix 文件(可能需要一些时间)
+
+; trigger editor
+TriggerDesc=选择当前触发：
+TriggerName=nam
+TriggerNew=新建
+TriggerPlaceOnMap=放置单元标记
+TriggerClone=复制
+TriggerDelete=删除
+TriggerOptionType=类型（会同步至全部关联标记）
+TriggerOptionName=名称：
+TriggerOptionHouse=所属方：
+TriggerOptionAttachedTrigger=关联的触发
+TriggerOptionDisableTip=被禁止的触发必须由其它触发激活后才能继续运作
+
+; team scripts
+ScriptTypesAddScript=添加
+ScriptTypesDelScript=删除
+ScriptsCaption=小队脚本
+ScriptTypesDesc=脚本类型允许你定义如一作战小队从一个路径点移动到另一路径点。一个脚本类型与小队类型相关联(不是特遣部队！)\n欲应用模板，请在下拉列表里选中一个预置模板，然后点击“新建”。\n如果预置列表里啥都没有，可以点击“刷新”以重新载入。
+ScriptTypesSelectedScript=脚本类型:
+ScriptTypesName=名称:
+ScriptTypesActions=行为:
+ScriptTypesActionType=行为类型:
+ScriptTypesActionParam=行为参数:
+ScriptTypesAddAction=添加
+ScriptTypesDelAction=删除
+ScriptTypesActionDesc=说明:
 
 ; iso view
 IsoCaption=地图视图
@@ -1398,46 +1507,6 @@ InfP5=允许AI重组::
 ; Now some translations from english to the used language (used for some combo-boxes, menus/listviews and of course unit names)
 ; currently used for: menu, iso-view status bar, unit/building/stuff list, overlay browser, terrain browser
 
-
-; FA2:YR
-FinalAlert 2(tm) Fansite link=%9 Fansite link
-FinalAlert 2(tm) Forum=%9 Forum
-
-[English-TranslationsRA2]
-Tiberium=Ore
-Run Tiberian Sun=Run Red Alert 2
-Tiberium Tree=Ore mine
-Countries=Houses; For the edit->houses dialog
-FinalSun Homepage=FinalAlert Homepage
-FinalSun support forum=FinalAlert support forum
-AutoCreate shores=Automatically create shore (AutoShore)
-Tiberium (Blue)=Ore
-Tiberium (Green)=Ore
-
-[English-Translations]
-; tooltips
-Make terrain flat=Flatten ground
-Raise a single tile=Raise single field (Not recommended!)
-Lower a single tile=Lower single field (Not recommended!)
-AutoCreate shores=Automatically create shore (only supported in FinalAlert)
-Autocreate shores=Automatically create shore (AutoShore)
-AutoLevel terrain height using cliffs=AutoLevel ground height using cliffs
-Auto level using cliffs=AutoLevel ground height using cliffs
-
-; other
-Bridge 1=Bridge topleft-bottomright
-Bridge 2=Bridge bottomleft-topright
-Railroad Bridge 1=Railroad bridge topleft-bottomright
-Railroad Bridge 2=Railroad bridge bottomleft-topright
-Wood Bridge 1=Wood bridge topleft-bottomright
-Wood Bridge 2=Wood bridge bottomleft-topright
-Easy mode=Beginner mode
-
-; FA2:YR
-FinalAlert 2(tm) Fansite link=%9 Fansite link
-FinalAlert 2(tm) Forum=%9 Forum
-
-[Chinese-TranslationsRA2]
 Tiberium=矿石
 Run Tiberian Sun=运行尤里的复仇
 Tiberium Tree=矿井
@@ -1448,15 +1517,19 @@ AutoCreate shores=自动建立海滨(自动海滨)
 Tiberium (Blue)=蓝色矿石
 Tiberium (Green)=绿色矿石
 
-[Chinese-Translations]
 ; tooltips
+Heighten ground (slope logic)=抬高地块（自动斜坡）
+Lower ground (slope logic)=降低地块（自动斜坡）
+Show all tilesets=显示所有隐藏地块
+Switch Framework Mode=切换框架模式显示
 Make terrain flat=平整地面
 Raise a single tile=升高单个区域(不推荐)
 Lower a single tile=降低单个区域(不推荐)
-AutoCreate shores=自动建立海岸线(只在 FinalAlert 中支持)
-Autocreate shores=自动建立海岸(自动海岸)
+Autocreate shores=自动产生海岸
 AutoLevel terrain height using cliffs=自动调整设置悬崖的地表高度
 Auto level using cliffs=自动调整设置悬崖的地表高度
+TerrainDlgTerrainGround=地形/地表：
+TerrainDlgOverlaySpecial=覆盖物/特殊：
 
 ; other
 Bridge 1=桥梁 左上-右下
@@ -1849,6 +1922,46 @@ Infantry=步兵单位
 Vehicles=机动部队
 Factories=工厂
 Base defenses=防御类建筑
+
+; FA2:YR
+FinalAlert 2(tm) Fansite link=%9 Fansite link
+FinalAlert 2(tm) Forum=%9 Forum
+
+[English-TranslationsRA2]
+Tiberium=Ore
+Run Tiberian Sun=Run Red Alert 2
+Tiberium Tree=Ore mine
+Countries=Houses; For the edit->houses dialog
+FinalSun Homepage=FinalAlert Homepage
+FinalSun support forum=FinalAlert support forum
+AutoCreate shores=Automatically create shore (AutoShore)
+Tiberium (Blue)=Ore
+Tiberium (Green)=Ore
+
+[English-Translations]
+; tooltips
+Make terrain flat=Flatten ground
+Raise a single tile=Raise single field (Not recommended!)
+Lower a single tile=Lower single field (Not recommended!)
+AutoCreate shores=Automatically create shore (only supported in FinalAlert)
+Autocreate shores=Automatically create shore (AutoShore)
+AutoLevel terrain height using cliffs=AutoLevel ground height using cliffs
+Auto level using cliffs=AutoLevel ground height using cliffs
+
+; other
+Bridge 1=Bridge topleft-bottomright
+Bridge 2=Bridge bottomleft-topright
+Railroad Bridge 1=Railroad bridge topleft-bottomright
+Railroad Bridge 2=Railroad bridge bottomleft-topright
+Wood Bridge 1=Wood bridge topleft-bottomright
+Wood Bridge 2=Wood bridge bottomleft-topright
+Easy mode=Beginner mode
+
+; FA2:YR
+FinalAlert 2(tm) Fansite link=%9 Fansite link
+FinalAlert 2(tm) Forum=%9 Forum
+
+
 
 
 
