--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -1070,7 +1070,7 @@ BEGIN
     COMBOBOX        IDC_SCRIPT_EXTRA,70,258,223,111,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Extra value of action:",IDC_SCRIPT_EXDESC,5,257,65,17
     COMBOBOX        IDC_SCRIPT_TEMPLATE,70,60,159,196,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Template",IDC_SCRIPTTYPE_TYPE2,5,64,65,12
+    LTEXT           "Template", IDC_SCRIPT_TEMPLATE_DSC,5,64,65,12
     PUSHBUTTON      "Copy",IDC_SCRIPT_COPY,165,106,59,14
 END
 
