--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1357,6 +1357,8 @@ ScriptTypesActionParam=行为参数:
 ScriptTypesAddAction=添加
 ScriptTypesDelAction=删除
 ScriptTypesActionDesc=说明:
+ScriptTypesSelectedTemplate=模板:
+ScriptTypesParamExtDesc=附加参数
 
 ; iso view
 IsoCaption=地图视图
