more script translation .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1359,7 +1359,7 @@ ScriptTypesAddAction=添加
 ScriptTypesDelAction=删除
 ScriptTypesActionDesc=说明:
 ScriptTypesSelectedTemplate=模板:
-ScriptTypesParamExtDesc=附加参数
+ScriptTypesParamExtDesc=附加参数:
 
 ; iso view
 IsoCaption=地图视图
@@ -1509,6 +1509,64 @@ InfP5=允许AI重组::
 ; ScriptTypesDelScript=确定删除脚本吗？该操作不能撤销
 ; Now some translations from english to the used language (used for some combo-boxes, menus/listviews and of course unit names)
 ; currently used for: menu, iso-view status bar, unit/building/stuff list, overlay browser, terrain browser
+; Do Something
+0 - Sleep=0 - 休眠
+1 - Attack nearest enemy=1 - 攻击最近的敌人
+2 - Move=2 - 移动
+3 - QMove=3 - 快速移动
+4 - Retreat home for R&R=4 - 撤离地图
+5 - Guard=5 - 警戒
+6 - Sticky (never recruit)=6 - 原地锁定（避免招募）
+7 - Enter object=7 - 进入物体
+8 - Capture object=8 - 占领物体
+9 - Move into & get eaten=9 - 进入并被吸收
+10 - Harvest=10 - 采矿
+11 - Area Guard=11 - 区域警戒
+12 - Return (to refinery)=12 - 返回（矿厂）
+13 - Stop=13 - 停止
+14 - Ambush (wait until discovered)=14 - 埋伏（等待被发现）
+15 - Hunt=15 - 穷追不舍
+16 - Unload=16 - 卸载/部署
+17 - Sabotage (move in & destroy)=17 - 爆破（进入并摧毁）
+18 - Construction=18 - 建造状态
+19 - Deconstruction=19 - 变卖状态
+20 - Repair=20 - 维修
+21 - Rescue=21 - 救援
+22 - Missile=22 - 发射
+23 - Harmless=23 - 无害化
+24 - Open=24 - （闸门）开启
+25 - Patrol=25 - 巡逻
+26 - Paradrop approach drop zone=26 - 找位置空投
+27 - Paradrop overlay drop zone=27 - 空投结束离开
+28 - Wait=28 - 等待
+29 - Attack again=29 - 再次攻击
+30 - Spyplane approach=30 - 侦察机侦查
+31 - Spyplane retreat=31 - 侦察机离开
+; Facings
+0 - NE=0 - 东北
+1 - E=1 - 东
+2 - SE=2 - 东南
+3 - S=3 - 南
+4 - SW=4 - 西南
+5 - W=5 - 西
+6 - NW=6 - 西北
+7 - N=7 - 北
+; Talk Bubble
+0 - None=0 - 无
+1 - Asterisk(*)=1 - 星号（*）
+2 - Question mark(?)=2 - 问号（?）
+3 - Exclamation mark(!)=3 - 感叹号（!）
+; Unload passenger
+0 - Keep Transports, Keep Units=0 - 保留载具和乘客
+1 - Keep Transports, Lose Units=1 - 保留载具，解散乘客
+2 - Lose Transports, Keep Units=2 - 解散载具，保留乘客
+3 - Lose Transports, Lose Units=3 - 载具和乘客都解散
+; Building Target Extra Param
+0 - Least threat=0 - 最小威胁
+1 - Most threat=1 - 最大威胁
+2 - Least distant=2 - 最近距离
+3 - Most distant=3 - 最远距离
+
 
 Tiberium=矿石
 Run Tiberian Sun=运行尤里的复仇
