--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1566,7 +1566,15 @@ InfP5=允许AI重组::
 1 - Most threat=1 - 最大威胁
 2 - Least distant=2 - 最近距离
 3 - Most distant=3 - 最远距离
-
+; Target
+1 - Not specified=1 - 任意
+2 - Buildings=2 - 建筑
+3 - Harvesters=3 - 矿车/矿厂
+4 - Infantry=4 - 步兵
+5 - Vehicles=5 - 载具
+6 - Factories=6 - 工厂
+7 - Base defenses=7 - 防御建筑
+9 - Power plants=9 - 电厂
 
 Tiberium=矿石
 Run Tiberian Sun=运行尤里的复仇
