implemented action insert mode and copy .

--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -1064,7 +1064,7 @@ BEGIN
     COMBOBOX        IDC_TYPE,70,221,223,192,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_PARAM,70,240,223,111,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Delete",IDC_DELETEACTION,233,201,60,14
-    PUSHBUTTON      "Add",IDC_ADDACTION,165,201,60,14
+    PUSHBUTTON      "Add",IDC_ADDACTION,97,201,60,14
     LTEXT           "Description:",IDC_SCRIPTTYPE_DESC,5,280,62,13
     EDITTEXT        IDC_DESCRIPTION,70,280,223,52,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
     COMBOBOX        IDC_SCRIPT_EXTRA,70,258,223,111,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
@@ -1072,6 +1072,8 @@ BEGIN
     COMBOBOX        IDC_SCRIPT_TEMPLATE,70,60,159,196,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Template:",IDC_SCRIPT_TEMPLATE_DSC,5,64,65,12
     PUSHBUTTON      "Copy",IDC_SCRIPT_COPY,165,106,59,14
+    CONTROL         "Insert Mode",IDC_SCRIPT_CK_INSERT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,5,201,61,15
+    PUSHBUTTON      "Copy",IDC_COPYACTION,165,201,60,14
 END
 
 IDD_AITRIGGERTYPESENABLE DIALOG 0, 0, 303, 204
