--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1356,7 +1356,9 @@ ScriptTypesActions=行为:
 ScriptTypesActionType=行为类型:
 ScriptTypesActionParam=行为参数:
 ScriptTypesAddAction=添加
+ScriptTypesCopyAction=复制
 ScriptTypesDelAction=删除
+ScriptTypesInsertMode=插入模式
 ScriptTypesActionDesc=说明:
 ScriptTypesSelectedTemplate=模板:
 ScriptTypesParamExtDesc=附加参数:
