adjusted control position .

--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -1053,7 +1053,7 @@ BEGIN
     LTEXT           "Scripttypes let you, for example, define that a team moves from one point to another. A scripttype is attached to a TeamType (not a TaskForce!)",IDC_SCTIPTTYPE_INRO,7,7,288,36
     LTEXT           "Scripttype",IDC_SCRIPTTYPE_TYPE,5,84,65,12
     COMBOBOX        IDC_SCRIPTTYPE,70,84,223,196,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Add",IDC_ADD,234,61,59,14
+    PUSHBUTTON      "Add",IDC_ADD,234,64,59,14
     PUSHBUTTON      "Delete",IDC_DELETE,232,106,59,14
     LTEXT           "Name:",IDC_SCRIPTTYPE_NAME,6,123,65,12
     EDITTEXT        IDC_NAME,71,123,223,13,ES_AUTOHSCROLL
@@ -1069,7 +1069,7 @@ BEGIN
     EDITTEXT        IDC_DESCRIPTION,70,280,223,52,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
     COMBOBOX        IDC_SCRIPT_EXTRA,70,258,223,111,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Extra value of action:",IDC_SCRIPT_EXDESC,5,257,65,17
-    COMBOBOX        IDC_SCRIPT_TEMPLATE,70,60,159,196,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_SCRIPT_TEMPLATE,70,64,159,196,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Template:",IDC_SCRIPT_TEMPLATE_DSC,5,64,65,12
     PUSHBUTTON      "Copy",IDC_SCRIPT_COPY,165,106,59,14
     CONTROL         "Insert Mode",IDC_SCRIPT_CK_INSERT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,5,201,61,15
@@ -1856,6 +1856,7 @@ BEGIN
         VERTGUIDE, 165
         VERTGUIDE, 293
         BOTTOMMARGIN, 280
+        HORZGUIDE, 64
         HORZGUIDE, 84
         HORZGUIDE, 106
         HORZGUIDE, 123
