--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -1051,22 +1051,29 @@ CAPTION "Scripts"
 FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
     LTEXT           "Scripttypes let you, for example, define that a team moves from one point to another. A scripttype is attached to a TeamType (not a TaskForce!)",IDC_SCTIPTTYPE_INRO,7,7,288,36
-    LTEXT           "Scripttype",IDC_SCRIPTTYPE_TYPE,5,50,65,12
-    COMBOBOX        IDC_SCRIPTTYPE,70,51,223,196,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Add",IDC_ADD,165,70,59,14
-    PUSHBUTTON      "Delete",IDC_DELETE,232,70,59,14
-    LTEXT           "Name:",IDC_SCRIPTTYPE_NAME,6,89,65,12
-    EDITTEXT        IDC_NAME,71,89,223,13,ES_AUTOHSCROLL
-    LTEXT           "Actions:",IDC_SCRIPTTYPE_ACTIONS,6,105,65,11
-    LISTBOX         IDC_ACTION,71,105,223,60,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Type of action:",IDC_SCRIPTTYPE_ACTIONTYPE,5,199,65,12
-    LTEXT           "Parameter of action:",IDC_PDESC,5,215,65,17
-    COMBOBOX        IDC_TYPE,70,200,223,192,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_PARAM,70,215,223,111,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Delete",IDC_DELETEACTION,233,172,60,14
-    PUSHBUTTON      "Add",IDC_ADDACTION,165,172,60,14
-    LTEXT           "Description:",IDC_SCRIPTTYPE_DESC,5,230,62,13
-    EDITTEXT        IDC_DESCRIPTION,70,230,223,50,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
+    LTEXT           "Scripttype",IDC_SCRIPTTYPE_TYPE,5,84,65,12
+    COMBOBOX        IDC_SCRIPTTYPE,70,84,223,196,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Add",IDC_ADD,234,64,59,14
+    PUSHBUTTON      "Delete",IDC_DELETE,232,106,59,14
+    LTEXT           "Name:",IDC_SCRIPTTYPE_NAME,6,123,65,12
+    EDITTEXT        IDC_NAME,71,123,223,13,ES_AUTOHSCROLL
+    LTEXT           "Actions:",IDC_SCRIPTTYPE_ACTIONS,6,139,65,11
+    LISTBOX         IDC_ACTION,71,139,223,60,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Type of action:",IDC_SCRIPTTYPE_ACTIONTYPE,5,221,65,12
+    LTEXT           "Parameter of action:",IDC_PDESC,5,240,65,17
+    COMBOBOX        IDC_TYPE,70,221,223,192,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_PARAM,70,240,223,111,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Delete",IDC_DELETEACTION,233,201,60,14
+    PUSHBUTTON      "Add",IDC_ADDACTION,97,201,60,14
+    LTEXT           "Description:",IDC_SCRIPTTYPE_DESC,5,280,62,13
+    EDITTEXT        IDC_DESCRIPTION,70,280,223,52,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
+    COMBOBOX        IDC_SCRIPT_EXTRA,70,258,223,111,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Extra value of action:",IDC_SCRIPT_EXDESC,5,257,65,17
+    COMBOBOX        IDC_SCRIPT_TEMPLATE,70,64,159,196,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Template:",IDC_SCRIPT_TEMPLATE_DSC,5,64,65,12
+    PUSHBUTTON      "Copy",IDC_SCRIPT_COPY,165,106,59,14
+    CONTROL         "Insert Mode",IDC_SCRIPT_CK_INSERT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,5,201,61,15
+    PUSHBUTTON      "Copy",IDC_COPYACTION,165,201,60,14
 END
 
 IDD_AITRIGGERTYPESENABLE DIALOG 0, 0, 303, 204
@@ -1847,15 +1854,17 @@ BEGIN
         RIGHTMARGIN, 302
         VERTGUIDE, 70
         VERTGUIDE, 165
-        BOTTOMMARGIN, 230
-        HORZGUIDE, 50
-        HORZGUIDE, 70
-        HORZGUIDE, 89
-        HORZGUIDE, 105
-        HORZGUIDE, 172
-        HORZGUIDE, 199
-        HORZGUIDE, 215
-        HORZGUIDE, 230
+        VERTGUIDE, 293
+        BOTTOMMARGIN, 280
+        HORZGUIDE, 64
+        HORZGUIDE, 84
+        HORZGUIDE, 106
+        HORZGUIDE, 123
+        HORZGUIDE, 139
+        HORZGUIDE, 201
+        HORZGUIDE, 240
+        HORZGUIDE, 257
+        HORZGUIDE, 280
     END
 
     IDD_TERRAINBAR, DIALOG
