completed team type translation & implemented clone feature .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1349,7 +1349,7 @@ ScriptTypesAddScript=添加
 ScriptTypesCopyScript=复制
 ScriptTypesDelScript=删除
 ScriptsCaption=小队脚本
-ScriptTypesDesc=脚本类型允许你定义如一作战小队从一个路径点移动到另一路径点。一个脚本类型与小队类型相关联(不是特遣部队！)\n欲应用模板，请在下拉列表里选中一个预置模板，然后点击“新建”。\n如果预置列表里啥都没有，可以点击“刷新”以重新载入。
+ScriptTypesDesc=脚本类型允许你定义如一作战小队从一个路径点移动到另一路径点。一个脚本类型与小队类型相关联(不是特遣部队！)\n欲应用模板，请在下拉列表里选中一个预置模板，然后点击“新建”。\n
 ScriptTypesSelectedScript=脚本类型:
 ScriptTypesName=名称:
 ScriptTypesActions=行为:
@@ -1362,6 +1362,55 @@ ScriptTypesInsertMode=插入模式
 ScriptTypesActionDesc=说明:
 ScriptTypesSelectedTemplate=模板:
 ScriptTypesParamExtDesc=附加参数:
+
+; team types
+TeamTypesCaption=小队选项
+TeamTypesTemplate=模板
+TeamTypesType=小队类型
+TeamTypesDesc=作战小队将特遣部队和脚本联系起来，并用于AI触发等场合。\n欲应用模板，请在下拉列表里选中一个预置模板，然后点击“新建”。\n
+TeamTypesNew=新建
+TeamTypesCopy=复制
+TeamTypesDelete=删除
+TeamTypesSelected=当前选中的类型
+TeamTypesName=名称:
+TeamTypesGroup=分组:
+TeamTypesVeteranLevel=经验等级:
+TeamTypesWaypoint=路径点:
+TeamTypesTransWaypoint=运输机生成路径点:
+TeamTypesHouse=所属方:
+TeamTypesPriority=优先权:
+TeamTypesTechLevel=科技等级:
+TeamTypesMax=实例上限:
+TeamTypesMCDecision=心控结果:
+TeamTypesTag=触发标签:
+TeamTypesScript=动作脚本:
+TeamTypesTaskforce=成员类型:
+TeamTypesLoadable=可搭载乘客
+TeamTypesFull=乘客在载具内
+TeamTypesAnnoyance=骚扰模式
+TeamTypesGuardSlower=消极反击
+TeamTypesRecruiter=无视分组
+TeamTypesAutocreate=考虑建造
+TeamTypesPrebuild=提前建造
+TeamTypesReinforce=阵亡自动候补
+TeamTypesDropped=空投入场
+TeamTypesWhiner=平民哀嚎
+TeamTypesLooseRecruit=吸纳闲置单位
+TeamTypesAggressive=激进模式
+TeamTypesSuicide=无脑冲锋
+TeamTypesOnTransOnly=被动运输模式
+TeamTypesAvoidThreats=绕开威胁热点
+TeamTypesIonImmune=离子风暴免疫
+TeamTypesTransportsReturnOnUnload=运输器下客返程
+TeamTypesAreTeamMembersRecruitable=成员可被征调
+TeamTypesIsBaseDefense=基地防御专用
+TeamTypesOnlyTargetHouseEnemy=仅攻击当前敌对方
+0 - <Don't care>=0 - <随意>
+1 - Add To Team=1 - 加入小队
+2 - Put in Grinder=2 - 放入回收厂
+3 - Put in Bio Reactor=3 - 放入生化反应炉
+4 - Go to Hunt=4 - 寻敌
+5 - Do Nothing=5 - 不作操作
 
 ; iso view
 IsoCaption=地图视图
