rearranged control positions .

--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -718,13 +718,36 @@ BEGIN
     LTEXT           "Name:",IDC_STATIC,10,51,30,10
     EDITTEXT        IDC_NAME,56,51,90,12,ES_AUTOHSCROLL
     LTEXT           "Veteran level:",IDC_STATIC,10,66,45,15
+    COMBOBOX        IDC_VETERANLEVEL,56,66,90,60,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Priority:",IDC_STATIC,10,96,40,10
+    EDITTEXT        IDC_PRIORITY,56,96,90,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Max:",IDC_STATIC,10,111,30,10
+    EDITTEXT        IDC_MAX,56,111,90,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Techlevel:",IDC_STATIC,10,125,40,10
+    COMBOBOX        IDC_TECHLEVEL,56,125,91,72,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Group:",IDC_STATIC,156,51,30,10
+    GROUPBOX        "Selected team type",IDC_STATIC,6,37,290,161
+    COMBOBOX        IDC_GROUP,200,51,90,78,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Waypoint:",IDC_STATIC,156,66,40,10
+    COMBOBOX        IDC_WAYPOINT,200,66,90,80,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Script:",IDC_STATIC,156,81,40,10
+    COMBOBOX        IDC_SCRIPT,200,81,90,205,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Task force:",IDC_STATIC,156,96,40,10
+    COMBOBOX        IDC_TASKFORCE,200,96,90,205,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Tag:",IDC_STATIC,156,111,40,13
+    COMBOBOX        IDC_TAG,200,111,90,186,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "",IDC_LTRANSPORTWAYPOINT,156,126,40,17
+    COMBOBOX        IDC_TRANSPORTWAYPOINT,200,126,90,80,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Mind Control Decision:",IDC_STATIC,164,4,43,16,NOT WS_VISIBLE
+    COMBOBOX        IDC_MINDCONTROLDECISION,209,6,92,205,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | NOT WS_VISIBLE | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Mind Control Decision:",IDC_MCD_L,10,139,43,16,NOT WS_VISIBLE
+    LTEXT           "House:",IDC_STATIC,10,81,35,10
+    COMBOBOX        IDC_HOUSE,56,81,90,62,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Loadable",IDC_LOADABLE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,10,145,55,8
     CONTROL         "Full",IDC_FULL,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,10,155,55,8
     CONTROL         "Annoyance",IDC_ANNOYANCE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,10,164,55,10
     CONTROL         "Guard slower",IDC_GUARDSLOWER,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,10,175,55,8
     CONTROL         "Recruiter",IDC_RECRUITER,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,10,185,55,8
-    LTEXT           "House:",IDC_STATIC,10,81,35,10
-    COMBOBOX        IDC_HOUSE,56,81,90,62,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Autocreate",IDC_AUTOCREATE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,125,145,55,8
     CONTROL         "Prebuild",IDC_PREBUILD,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,125,155,55,8
     CONTROL         "Reinforce",IDC_REINFORCE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,125,165,55,8
@@ -742,29 +765,6 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,185,165,105,8
     CONTROL         "IsBaseDefense",IDC_ISBASEDEFENSE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,185,175,80,8
     CONTROL         "OnlyTargetHouseEnemy",IDC_ONLYTARGETHOUSEENEMY,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,185,185,100,8
-    LTEXT           "Priority:",IDC_STATIC,10,96,40,10
-    EDITTEXT        IDC_PRIORITY,56,96,90,12,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Max:",IDC_STATIC,10,111,30,10
-    EDITTEXT        IDC_MAX,56,111,90,12,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Techlevel:",IDC_STATIC,10,125,40,10
-    COMBOBOX        IDC_TECHLEVEL,56,125,91,72,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Group:",IDC_STATIC,156,51,30,10
-    GROUPBOX        "Selected team type",IDC_STATIC,6,37,290,161
-    COMBOBOX        IDC_GROUP,200,51,90,78,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Waypoint:",IDC_STATIC,156,66,40,10
-    COMBOBOX        IDC_WAYPOINT,200,66,90,80,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Script:",IDC_STATIC,156,81,40,10
-    COMBOBOX        IDC_SCRIPT,200,81,90,205,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Task force:",IDC_STATIC,156,96,40,10
-    COMBOBOX        IDC_TASKFORCE,200,96,90,205,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_VETERANLEVEL,56,66,90,60,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Tag:",IDC_STATIC,156,111,40,13
-    COMBOBOX        IDC_TAG,200,111,90,186,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "",IDC_LTRANSPORTWAYPOINT,156,126,40,17
-    COMBOBOX        IDC_TRANSPORTWAYPOINT,200,126,90,80,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Mind Control Decision:",IDC_STATIC,164,4,43,16,NOT WS_VISIBLE
-    COMBOBOX        IDC_MINDCONTROLDECISION,209,6,92,205,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | NOT WS_VISIBLE | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Mind Control Decision:",IDC_MCD_L,10,139,43,16,NOT WS_VISIBLE
 END
 #endif
 
@@ -1308,54 +1308,54 @@ BEGIN
     COMBOBOX        IDC_TEAMTYPE_TEMPLATE,55,35,235,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Name:",IDC_TEAMTYPE_P_NAME,10,90,30,10
     GROUPBOX        "Selected team type",IDC_TEAMTYPE_GBOX,6,79,290,139
-    EDITTEXT        IDC_NAME,56,90,90,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_NAME,55,90,90,14,ES_AUTOHSCROLL
     LTEXT           "Veteran level:",IDC_TEAMTYPE_P_VLEVEL,10,105,45,14
     COMBOBOX        IDC_VETERANLEVEL,55,105,90,60,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "House:",IDC_TEAMTYPE_P_HOUSE,10,119,35,10
-    COMBOBOX        IDC_HOUSE,55,119,90,62,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Priority:",IDC_TEAMTYPE_P_PRIORITY,10,136,40,10
-    EDITTEXT        IDC_PRIORITY,55,136,90,12,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Max:",IDC_TEAMTYPE_P_MAX,10,150,30,10
+    LTEXT           "House:",IDC_TEAMTYPE_P_HOUSE,10,120,35,10
+    COMBOBOX        IDC_HOUSE,55,120,90,62,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Priority:",IDC_TEAMTYPE_P_PRIORITY,10,135,40,10
+    EDITTEXT        IDC_PRIORITY,55,135,90,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Max:",IDC_TEAMTYPE_P_MAX,10,150,40,10
     EDITTEXT        IDC_MAX,55,150,90,12,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Techlevel:",IDC_TEAMTYPE_P_TECHLEVEL,156,136,40,10
-    COMBOBOX        IDC_TECHLEVEL,200,136,90,72,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Techlevel:",IDC_TEAMTYPE_P_TECHLEVEL,156,135,40,10
+    COMBOBOX        IDC_TECHLEVEL,200,135,90,72,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Group:",IDC_TEAMTYPE_P_GROUP,156,90,30,10
     COMBOBOX        IDC_GROUP,200,90,90,78,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Waypoint:",IDC_TEAMTYPE_P_WAYP,156,105,40,10
     COMBOBOX        IDC_WAYPOINT,200,105,90,80,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Script:",IDC_TEAMTYPE_P_SCRIPT,10,168,40,14
-    COMBOBOX        IDC_SCRIPT,55,168,235,186,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Task force:",IDC_TEAMTYPE_P_TASKFORCE,10,182,40,10
-    COMBOBOX        IDC_TASKFORCE,55,182,235,205,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Tag:",IDC_TEAMTYPE_P_TAG,10,196,40,10
-    COMBOBOX        IDC_TAG,55,196,235,205,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Transport waypoint:",IDC_LTRANSPORTWAYPOINT,156,119,40,17
-    COMBOBOX        IDC_TRANSPORTWAYPOINT,200,119,90,80,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Mind Control Decision:",IDC_MCD_L,156,150,43,16
+    LTEXT           "Script:",IDC_TEAMTYPE_P_SCRIPT,10,165,40,14
+    COMBOBOX        IDC_SCRIPT,55,165,235,186,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Task force:",IDC_TEAMTYPE_P_TASKFORCE,10,180,40,10
+    COMBOBOX        IDC_TASKFORCE,55,180,235,205,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Tag:",IDC_TEAMTYPE_P_TAG,10,195,40,10
+    COMBOBOX        IDC_TAG,55,195,235,205,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Transport waypoint:",IDC_LTRANSPORTWAYPOINT,156,117,40,17
+    COMBOBOX        IDC_TRANSPORTWAYPOINT,200,120,90,80,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Mind Control Decision:",IDC_MCD_L,156,147,43,16
     COMBOBOX        IDC_MINDCONTROLDECISION,200,150,90,205,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Team types connect a trigger with task forces",IDC_TEAMTYPE_DESC,11,5,290,29
-    CONTROL         "Loadable",IDC_LOADABLE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,10,228,55,8
-    CONTROL         "Full",IDC_FULL,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,10,238,55,8
-    CONTROL         "Annoyance",IDC_ANNOYANCE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,10,251,55,9
-    CONTROL         "Guard slower",IDC_GUARDSLOWER,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,10,262,55,8
-    CONTROL         "Recruiter",IDC_RECRUITER,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,10,273,55,8
-    CONTROL         "Autocreate",IDC_AUTOCREATE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,125,228,55,8
-    CONTROL         "Prebuild",IDC_PREBUILD,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,125,238,55,8
-    CONTROL         "Reinforce",IDC_REINFORCE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,125,251,55,8
-    CONTROL         "Cargo plane",IDC_DROPPOD,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,65,228,55,8
-    CONTROL         "Whiner",IDC_WHINER,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,65,238,55,8
-    CONTROL         "Loose recruit",IDC_LOOSERECRUIT,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,65,251,55,8
-    CONTROL         "Aggressive",IDC_AGGRESSIVE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,65,262,55,8
-    CONTROL         "Suicide",IDC_SUICIDE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,65,273,55,8
-    CONTROL         "OnTransOnly",IDC_ONTRANSONLY,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,125,262,55,8
-    CONTROL         "AvoidThreats",IDC_AVOIDTHREATS,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,125,273,55,8
-    CONTROL         "Ion immune",IDC_IONIMMUNE,"Button",BS_AUTOCHECKBOX | BS_LEFT | NOT WS_VISIBLE | WS_TABSTOP,185,228,60,8
+    CONTROL         "Loadable",IDC_LOADABLE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,10,220,60,8
+    CONTROL         "Full",IDC_FULL,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,10,230,60,8
+    CONTROL         "Annoyance",IDC_ANNOYANCE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,10,240,60,9
+    CONTROL         "Guard slower",IDC_GUARDSLOWER,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,10,250,60,8
+    CONTROL         "Recruiter",IDC_RECRUITER,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,10,260,60,8
+    CONTROL         "Autocreate",IDC_AUTOCREATE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,131,220,60,8
+    CONTROL         "Prebuild",IDC_PREBUILD,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,131,230,60,8
+    CONTROL         "Reinforce",IDC_REINFORCE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,131,240,60,8
+    CONTROL         "Cargo plane",IDC_DROPPOD,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,70,220,60,8
+    CONTROL         "Whiner",IDC_WHINER,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,70,230,60,8
+    CONTROL         "Loose recruit",IDC_LOOSERECRUIT,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,70,240,60,8
+    CONTROL         "Aggressive",IDC_AGGRESSIVE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,70,250,60,8
+    CONTROL         "Suicide",IDC_SUICIDE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,70,260,60,8
+    CONTROL         "OnTransOnly",IDC_ONTRANSONLY,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,131,250,60,8
+    CONTROL         "AvoidThreats",IDC_AVOIDTHREATS,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,131,260,60,8
+    CONTROL         "Ion immune",IDC_IONIMMUNE,"Button",BS_AUTOCHECKBOX | BS_LEFT | NOT WS_VISIBLE | WS_TABSTOP,197,220,48,8
     CONTROL         "TransportsReturnOnUnload",IDC_TRANSPORTRETURNSONUNLOAD,
-                    "Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,185,251,100,8
+                    "Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,197,240,100,8
     CONTROL         "AreTeamMembersRecruitable",IDC_ARETEAMMEMBERSRECRUITABLE,
-                    "Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,185,238,105,8
-    CONTROL         "IsBaseDefense",IDC_ISBASEDEFENSE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,185,262,80,8
-    CONTROL         "OnlyTargetHouseEnemy",IDC_ONLYTARGETHOUSEENEMY,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,185,273,100,8
+                    "Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,197,230,102,8
+    CONTROL         "IsBaseDefense",IDC_ISBASEDEFENSE,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,197,250,80,8
+    CONTROL         "OnlyTargetHouseEnemy",IDC_ONLYTARGETHOUSEENEMY,"Button",BS_AUTOCHECKBOX | BS_LEFT | WS_TABSTOP,197,260,100,8
 END
 #endif
 
@@ -1963,7 +1963,10 @@ BEGIN
     BEGIN
         VERTGUIDE, 10
         VERTGUIDE, 55
+        VERTGUIDE, 70
+        VERTGUIDE, 131
         VERTGUIDE, 156
+        VERTGUIDE, 197
         VERTGUIDE, 200
         VERTGUIDE, 245
         VERTGUIDE, 290
@@ -1975,17 +1978,17 @@ BEGIN
         HORZGUIDE, 79
         HORZGUIDE, 90
         HORZGUIDE, 105
-        HORZGUIDE, 119
-        HORZGUIDE, 136
+        HORZGUIDE, 120
+        HORZGUIDE, 135
         HORZGUIDE, 150
-        HORZGUIDE, 168
-        HORZGUIDE, 182
+        HORZGUIDE, 165
+        HORZGUIDE, 180
         HORZGUIDE, 196
         HORZGUIDE, 232
-        HORZGUIDE, 238
-        HORZGUIDE, 251
-        HORZGUIDE, 262
-        HORZGUIDE, 273
+        HORZGUIDE, 230
+        HORZGUIDE, 240
+        HORZGUIDE, 250
+        HORZGUIDE, 260
     END
 
     IDD_NEWMAPTYPE, DIALOG
@@ -2835,6 +2838,12 @@ IDD_TEAMTYPES$(RA2_MODE) DLGINIT
 IDD_TEAMTYPES DLGINIT
 #endif
 BEGIN
+    IDC_VETERANLEVEL, 0x403, 2, 0
+0x0031, 
+    IDC_VETERANLEVEL, 0x403, 2, 0
+0x0032, 
+    IDC_VETERANLEVEL, 0x403, 2, 0
+0x0033, 
     IDC_TECHLEVEL, 0x403, 2, 0
 0x0030, 
     IDC_TECHLEVEL, 0x403, 2, 0
@@ -2859,26 +2868,6 @@ BEGIN
 0x3031, "\000" 
     IDC_GROUP, 0x403, 3, 0
 0x312d, "\000" 
-    IDC_VETERANLEVEL, 0x403, 2, 0
-0x0031, 
-    IDC_VETERANLEVEL, 0x403, 2, 0
-0x0032, 
-    IDC_VETERANLEVEL, 0x403, 2, 0
-0x0033, 
-    IDC_MINDCONTROLDECISION, 0x403, 17, 0
-0x2030, 0x202d, 0x443c, 0x6e6f, 0x7427, 0x6320, 0x7261, 0x3e65, "\000" 
-    IDC_MINDCONTROLDECISION, 0x403, 16, 0
-0x2031, 0x202d, 0x6441, 0x2064, 0x6f54, 0x5420, 0x6165, 0x006d, 
-    IDC_MINDCONTROLDECISION, 0x403, 19, 0
-0x2032, 0x202d, 0x7550, 0x2074, 0x6e69, 0x4720, 0x6972, 0x646e, 0x7265, 
-"\000" 
-    IDC_MINDCONTROLDECISION, 0x403, 23, 0
-0x2033, 0x202d, 0x7550, 0x2074, 0x6e69, 0x4220, 0x6f69, 0x5220, 0x6165, 
-0x7463, 0x726f, "\000" 
-    IDC_MINDCONTROLDECISION, 0x403, 15, 0
-0x2034, 0x202d, 0x6f47, 0x7420, 0x206f, 0x7548, 0x746e, "\000" 
-    IDC_MINDCONTROLDECISION, 0x403, 15, 0
-0x2035, 0x202d, 0x6f44, 0x4e20, 0x746f, 0x6968, 0x676e, "\000" 
     0
 END
 #endif
