implemented team type template .

--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -1305,7 +1305,7 @@ BEGIN
     PUSHBUTTON      "Clone",IDC_TEAMTYPE_COPY,218,63,35,15
     PUSHBUTTON      "Delete",IDC_DELETETEAMTYPE,255,63,35,15
     LTEXT           "Template:",IDC_TEAMTYPE_T_TXT,10,35,33,8
-    COMBOBOX        IDC_TEAMTYPE_TEMPLATE,55,35,235,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_TEAMTYPE_TEMPLATE,55,35,235,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Name:",IDC_TEAMTYPE_P_NAME,10,90,30,10
     GROUPBOX        "Selected team type",IDC_TEAMTYPE_GBOX,6,79,290,139
     EDITTEXT        IDC_NAME,55,90,90,14,ES_AUTOHSCROLL
