--- a/MissionEditor/data/FinalAlert2/FAData.ini
+++ b/MissionEditor/data/FinalAlert2/FAData.ini
@@ -45,6 +45,23 @@ Counts=5
 4=装载部队卸载攻击,New unload script,6,3,0,8,2,39,0,20,0,50,120,0,0
 5=装载入载具并攻击,New load script,3,21,EMPTY,14,EMPTY,0,0
 
+;===TeamTemplates===
+;X=UIName, Name, Experience Level, Priority, Max, Group, TechLevel, Mind-control Result, Checkbox1, Checkbox2, ..., Checkbox19
+;Checkbox order matrix:
+; |1 6   11    |
+; |2 7   12  16|
+; |3 8   13  17|
+; |4 9   14  18|
+; |5 10  15  19|
+
+;By Sandman
+[TeamTemplates]
+DefaultName=默认
+Counts=3
+1=空降部队,New Paratroop Team,1,5,5,-1,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0
+2=AI生产小队,New AI Production Team,1,5,10,-1,5,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0,0,0,0
+3=突击小队,New Offense Team,1,5,5,-1,0,0,0,0,0,0,0,0,0,0,1,1,1,0,0,0,0,0,0,0,0
+
 ; not NOSURFACES:
 ;[BuildingVoxelTurretsRA2]
 ;GTGCANX=-1
