Added ':' for translation .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1365,8 +1365,8 @@ ScriptTypesParamExtDesc=附加参数:
 
 ; team types
 TeamTypesCaption=小队选项
-TeamTypesTemplate=模板
-TeamTypesType=小队类型
+TeamTypesTemplate=模板:
+TeamTypesType=小队类型:
 TeamTypesDesc=作战小队将特遣部队和脚本联系起来，并用于AI触发等场合。\n欲应用模板，请在下拉列表里选中一个预置模板，然后点击“新建”。\n
 TeamTypesNew=新建
 TeamTypesCopy=复制
