implemented taskforce member clone .

--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -778,7 +778,7 @@ BEGIN
     LTEXT           "Units in task force:",IDC_STATIC,17,88,61,13
     LISTBOX         IDC_UNITS,87,88,199,68,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Add",IDC_ADDUNIT,17,102,61,14
-    PUSHBUTTON      "Delete",IDC_DELETEUNIT,17,121,61,15
+    PUSHBUTTON      "Delete",IDC_DELETEUNIT,17,135,61,15
     LTEXT           "Group:",IDC_STATIC,17,69,61,13
     EDITTEXT        IDC_GROUP,87,69,199,13,ES_AUTOHSCROLL
     LTEXT           "Number of units:",IDC_STATIC,16,160,62,12
@@ -791,6 +791,7 @@ BEGIN
     LTEXT           "Name:",IDC_STATIC,17,56,61,12
     EDITTEXT        IDC_NAME,87,54,199,13,ES_AUTOHSCROLL
     PUSHBUTTON      "Clone",IDC_COPYTASKFORCE,156,23,64,15
+    PUSHBUTTON      "Clone",IDC_COPYUNIT,17,118,61,15
 END
 
 IDD_TAGS DIALOG 0, 0, 303, 204
@@ -1818,6 +1819,7 @@ BEGIN
 
     IDD_TASKFORCES, DIALOG
     BEGIN
+        VERTGUIDE, 17
         HORZGUIDE, 37
     END
 
@@ -1986,8 +1988,8 @@ BEGIN
         HORZGUIDE, 165
         HORZGUIDE, 180
         HORZGUIDE, 196
-        HORZGUIDE, 232
         HORZGUIDE, 230
+        HORZGUIDE, 232
         HORZGUIDE, 240
         HORZGUIDE, 250
         HORZGUIDE, 260
