--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -773,22 +773,22 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "Taskforces"
 FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
-    LTEXT           "Task forces:",IDC_STATIC,7,7,71,10
+    LTEXT           "Task forces:",IDC_TASKFORCE_T_TYPE,7,7,71,10
     COMBOBOX        IDC_TASKFORCES,87,7,199,130,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Units in task force:",IDC_STATIC,17,88,61,13
+    LTEXT           "Units in task force:",IDC_TASKFORCE_T_MEMBERS,17,88,61,13
     LISTBOX         IDC_UNITS,87,88,199,68,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Add",IDC_ADDUNIT,17,102,61,14
     PUSHBUTTON      "Delete",IDC_DELETEUNIT,17,135,61,15
-    LTEXT           "Group:",IDC_STATIC,17,69,61,13
+    LTEXT           "Group:",IDC_TASKFORCE_T_GROUP,17,69,61,13
     EDITTEXT        IDC_GROUP,87,69,199,13,ES_AUTOHSCROLL
-    LTEXT           "Number of units:",IDC_STATIC,16,160,62,12
+    LTEXT           "Number of units:",IDC_TASKFORCE_T_U_NUM,16,160,62,12
     EDITTEXT        IDC_NUMBERUNITS,87,160,199,14,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Unit type:",IDC_STATIC,17,179,62,12
+    LTEXT           "Unit type:",IDC_TASKFORCE_T_U_TYPE,17,179,62,12
     COMBOBOX        IDC_UNITTYPE,87,179,199,183,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Selected task force",IDC_STATIC,7,45,290,153
+    GROUPBOX        "Selected task force",IDC_TASKFORCE_G_SELECTED,7,45,290,153
     PUSHBUTTON      "Delete",IDC_DELETETASKFORCE,222,23,64,15
     PUSHBUTTON      "Add",IDC_ADDTASKFORCE,89,22,64,15
-    LTEXT           "Name:",IDC_STATIC,17,56,61,12
+    LTEXT           "Name:",IDC_TASKFORCE_T_NAME,17,56,61,12
     EDITTEXT        IDC_NAME,87,54,199,13,ES_AUTOHSCROLL
     PUSHBUTTON      "Clone",IDC_COPYTASKFORCE,156,23,64,15
     PUSHBUTTON      "Clone",IDC_COPYUNIT,17,118,61,15
