--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1344,6 +1344,22 @@ TriggerOptionHouse=所属方：
 TriggerOptionAttachedTrigger=关联的触发
 TriggerOptionDisableTip=被禁止的触发必须由其它触发激活后才能继续运作
 
+; taskforces
+TaskforcesCaption=成员组
+TaskforcesType=成员组类型：
+TaskforcesAdd=添加
+TaskforcesCopy=复制
+TaskforcesDelete=删除
+TaskforcesSelected=选定的成员组
+TaskforcesName=名称：
+TaskforcesGroup=分组：
+TaskforcesMembers=成员构成：
+TaskforcesAddUnit=添加
+TaskforcesCopyUnit=复制
+TaskforcesDeleteUnit=删除
+TaskforcesUnitNumber=单位数量：
+TaskforcesUnitType=单位类型：
+
 ; team scripts
 ScriptTypesAddScript=添加
 ScriptTypesCopyScript=复制
